[gd_scene load_steps=4 format=3 uid="uid://c5xxgrk6sdgha"]

[ext_resource type="Script" uid="uid://3l3521ge67g" path="res://ui/settings_menu.gd" id="1_a6yft"]
[ext_resource type="Texture2D" uid="uid://detl4bsj0hdnp" path="res://ui/PRE_ORIG_SIZE.png" id="2_2ty5h"]
[ext_resource type="Theme" uid="uid://dmtgg2vkvwa2s" path="res://ui/theme/Game_theme.tres" id="3_tog15"]

[node name="SettingsMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_a6yft")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.44291076, 0.44291076, 0.44291073, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2ty5h")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_tog15")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="WindowedModeOptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResolutionOptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"

[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowedModeOptionButton" to="." method="_on_windowed_mode_option_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ResolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
